--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -41,6 +41,7 @@ jobs:
           echo "git clone --depth 1 --branch  $DEPS_BRANCHNAME $DROOLS_REPO_URL"
           git clone --depth 1 --branch $DEPS_BRANCHNAME $DROOLS_REPO_URL
           cd drools
+          ./productized/remove_modules.sh ./productized/modules
           mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
           cd ..
           rm -rf drools
@@ -50,6 +51,7 @@ jobs:
           echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_RUNTIMES_REPO_URL"
           git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_RUNTIMES_REPO_URL
           cd kogito-runtimes
+          ./productized/remove_modules.sh ./productized/modules
           mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
           cd ..
           rm -rf kogito-runtimes
@@ -59,6 +61,7 @@ jobs:
           echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_APPS_REPO_URL"
           git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_APPS_REPO_URL
           cd kogito-apps
+          ./productized/remove_modules.sh ./productized/modules
           mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
           cd ..
           rm -rf kogito-apps
