--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -20,6 +20,12 @@ jobs:
       NIGHTLY: "true"
       NIGHTLY_DEPLOY_FOLDER: "/home/runner/.m2/repository"
     steps:
+      - name: "Remove big packages to free space on the VM"
+        shell: bash
+        run: |
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /usr/local/.ghcup/
+    
       - name: "Checkout Repository"
         uses: actions/checkout@v6
 
@@ -71,6 +77,9 @@ jobs:
           echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KIE_TOOLS_REPO_URL"
           git clone --depth 1 --branch $DEPS_BRANCHNAME $KIE_TOOLS_REPO_URL
           cd kie-tools
+          mkdir ./packages/maven-base/.mvn
+          echo "-Dversion.org.kie.kogito=999-SNAPSHOT" > "./packages/maven-base/.mvn/maven.config"
+          echo "--no-snapshot-updates" >> "./packages/maven-base/.mvn/maven.config"
           mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
           cd ..
           rm -rf kie-tools
